19 Oct 2006 - bear

    Changed birthday epoch to be a constant defined in parsedatetime_const
    Lots of little cosmetic code changes
    Removed the individual files in the docs/ folder
    Added dist, build and parsedatetime-egg.info to svn:ignore

17 Oct 2006 - darshana

    Added birthday epoch constraint
    Fixed date parsing. 3-digit year not allowed now.
    Fixed the unit tests too to either have yy or yyyy.

9 Oct 2006 - bear

    0.7.4 release
    Setting trunk to 0.7.5

5 Oct 2006 - darshana

    Fixed "ago" bug -- Issue #7 http://code.google.com/p/parsedatetime/issues/detail?id=7
    
    Fixed bug where default year for dates that are in the future get next year, not 
    current year -- Issue #8 http://code.google.com/p/parsedatetime/issues/detail?id=8

    Fixed strings like "1 week ago", "lunch tomorrow"
    
25 Sep 2006 - bear

    0.7.3 release
    Setting trunk to 0.7.4

13 Sep 2006 - bear

    Added Darshana as an author and updated the copyright text
    Added "eom" and "eoy" tests

11 Sep 2006 - bear

    Fixed a subtle dictionary reference bug in buildSources() that was causing
    any source related modifier to not honor the day, month or year.  It only
    started being seen as I was working on adding "eod" support as a 'true'
    modifier instead.

    Found another subtle bug in evalModifier() if the modifier was followed
    by the day of the week - the offset math was not consistent with the
    other day-of-week offset calculations.

    Worked on converting "eod" support from the special case modifier to work
    as a true modifier.

    The following is now supported:
        eod tomorrow
        tomorrow eod
        monday eod
        eod monday
        meeting eod
        eod meeting

10 Sep 2006 - bear

    Added a sub-range test in response to Issue #6 http://code.google.com/p/parsedatetime/issues/detail?id=6

    Not that it works, just wanted to start the process.

6 Sep 2006 - bear
